test example for rpc call

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,11 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "axios": "^1.7.7",
     "electron-updater": "^6.1.7",
     "ipfs": "^0.66.1",
+    "jayson": "^4.1.2",
+    "json-rpc-client": "^0.2.2",
     "react-native": "^0.75.4",
     "react-router-dom": "^6.26.2",
     "react-switch": "^7.0.0",
@@ -35,6 +38,7 @@
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/axios": "^0.14.0",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
