--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "ipfs": "^0.66.1",
     "jayson": "^4.1.2",
     "json-rpc-client": "^0.2.2",
+    "node-pty": "^1.0.0",
     "react-native": "^0.75.4",
     "react-router-dom": "^6.26.2",
     "react-switch": "^7.0.0",
