Files updates, Mining changed to be more accurate

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ tags
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,node,go
+backend/btcwallet
+.gitignore
