status page update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,13 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "electron-updater": "^6.1.7",
     "ipfs": "^0.66.1",
     "jayson": "^4.1.2",
     "json-rpc-client": "^0.2.2",
     "node-pty": "^1.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-native": "^0.75.4",
     "react-router-dom": "^6.26.2",
     "react-switch": "^7.0.0",
