--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "electron-store": "^10.0.0",
     "electron-updater": "^6.1.7",
     "ipfs": "^0.66.1",
     "jayson": "^4.1.2",
