--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "electron-store": "^10.0.0",
